# pidgin-autohide

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
po/: POTFILES.in
src/: Makefile.am  pidgin-autohide.c  pidgin-autohide.h
