# The top-level input Makefile for pidgin-osd

# minimum required automake 1.6
AUTOMAKE_OPTIONS = 1.6

# Any directories which should be built and installed.
SUBDIRS = src po

# The directories which are part of the distribution.
DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST =		\
	AUTHORS		\
	COPYING		\
	INSTALL		\
	README	
