# The input Makefile for the main pidgin-psd

# The plugin directory.
libdir			=	$(PIDGIN_LIBDIR)/pidgin

# The plugin library.
lib_LTLIBRARIES		=	pidgin-autohide.la

# The plugin sources.
pidgin_autohide_la_SOURCES	=	pidgin-autohide.c
pidgin_autohide_la_CFLAGS	=	@PIDGIN_CFLAGS@
pidgin_autohide_la_LDFLAGS	=	-module -avoid-version
